
<resources>
    <string name="app_name">FitLog</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save_changes">Save Changes</string>
    <string name="save_food">Save Food</string>
    <string name="add_food">Add Food</string>
    <string name="create_custom_food">Create Custom Food</string>
    <string name="food_name">Food Name</string>
    <string name="serving_size">Serving Size</string>
    <string name="category_optional">Category (Optional)</string>
    <string name="select_category">Select category</string>
    <string name="nutrition_preview">Nutrition Preview</string>
    <string name="todays_summary">Today\'s Summary</string>
    <string name="edit">Edit</string>
    <string name="today">Today</string>
    <string name="calories">Calories</string>
    <string name="macronutrients">Macronutrients</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="todays_diary">Today\'s Diary</string>
</resources>
